[gd_scene load_steps=14 format=3 uid="uid://bg328vbu8pyxi"]

[ext_resource type="Script" uid="uid://dr27p6v22oqbp" path="res://scripts/main_menu.gd" id="1_4puu3"]
[ext_resource type="Script" uid="uid://dwcn6ygouxjjb" path="res://scripts/parallax_background.gd" id="1_hjqkr"]
[ext_resource type="Texture2D" uid="uid://doie3dy6gmo1y" path="res://assets/Backgrounds/PNGs/Condesed/Starry background  - Layer 01 - Void.png" id="1_l1nx4"]
[ext_resource type="Texture2D" uid="uid://ct3i0di1yplv" path="res://assets/Backgrounds/PNGs/Condesed/Starry background  - Layer 02 - Stars.png" id="2_6s8de"]
[ext_resource type="FontFile" uid="uid://bi7l0mmnx2imk" path="res://assets/fonts/Ethnocentric Rg.otf" id="2_k2h45"]
[ext_resource type="Texture2D" uid="uid://dlurnwrvh3l4h" path="res://assets/Backgrounds/PNGs/Condesed/Starry background  - Layer 03 - Stars.png" id="3_5mnuw"]

[sub_resource type="Animation" id="Animation_37lo2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(145.5, 84)]
}

[sub_resource type="Animation" id="Animation_je0ch"]
resource_name = "float"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(145.5, 84), Vector2(145.5, 80), Vector2(145.5, 84)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_cm1vv"]
_data = {
&"RESET": SubResource("Animation_37lo2"),
&"float": SubResource("Animation_je0ch")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_u7kgc"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hvjws"]
bg_color = Color(0.589096, 0.589096, 0.589096, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_p56yx"]
bg_color = Color(0.299547, 0.299547, 0.299547, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fjikb"]
bg_color = Color(1, 1, 1, 1)
corner_radius_top_left = 16
corner_radius_top_right = 16
corner_radius_bottom_right = 16
corner_radius_bottom_left = 16

[node name="main_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_4puu3")

[node name="Label" type="Label" parent="."]
modulate = Color(0.838897, 0.838897, 0.838897, 1)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -430.5
offset_top = 84.0
offset_right = 431.5
offset_bottom = 157.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 9
theme_override_fonts/font = ExtResource("2_k2h45")
theme_override_font_sizes/font_size = 60
text = "The 7th Expedition"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Label"]
libraries = {
&"": SubResource("AnimationLibrary_cm1vv")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -103.5
offset_top = -11.0
offset_right = 103.5
offset_bottom = 196.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 24

[node name="start" type="Button" parent="VBoxContainer"]
modulate = Color(0.851769, 0.851769, 0.851769, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_k2h45")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_u7kgc")
theme_override_styles/hover = SubResource("StyleBoxFlat_hvjws")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p56yx")
theme_override_styles/normal = SubResource("StyleBoxFlat_fjikb")
text = "start"

[node name="quit" type="Button" parent="VBoxContainer"]
modulate = Color(0.808998, 0.808998, 0.808998, 1)
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(0, 0, 0, 1)
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_colors/font_focus_color = Color(0, 0, 0, 1)
theme_override_colors/font_pressed_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_k2h45")
theme_override_font_sizes/font_size = 30
theme_override_styles/focus = SubResource("StyleBoxEmpty_u7kgc")
theme_override_styles/hover = SubResource("StyleBoxFlat_hvjws")
theme_override_styles/pressed = SubResource("StyleBoxFlat_p56yx")
theme_override_styles/normal = SubResource("StyleBoxFlat_fjikb")
text = "quit"

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]
scale = Vector2(2, 2)
transform = Transform2D(2, 0, 0, 2, 0, 0)
script = ExtResource("1_hjqkr")

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
position = Vector2(12.5, 162.5)
texture = ExtResource("1_l1nx4")

[node name="ParallaxLayer2" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer2"]
position = Vector2(9.5, 160)
texture = ExtResource("2_6s8de")

[node name="ParallaxLayer3" type="ParallaxLayer" parent="ParallaxBackground"]

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer3"]
position = Vector2(8.5, 161)
texture = ExtResource("3_5mnuw")

[node name="button_audio" type="AudioStreamPlayer2D" parent="."]

[connection signal="mouse_entered" from="VBoxContainer/start" to="." method="_on_start_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/start" to="." method="_on_start_pressed"]
[connection signal="mouse_entered" from="VBoxContainer/quit" to="." method="_on_quit_mouse_entered"]
[connection signal="pressed" from="VBoxContainer/quit" to="." method="_on_quit_pressed"]
